# sanpo-ban

./: .gitignore  .pipeline-state.md
docs/: README.md  backlog.md
docs/architecture/: system-context.md  tech-stack.md
docs/features/sanpo-ban/: basic-design.md  future.md  requirements.md  research.md
docs/features/sanpo-ban/detailed-design/: v2-barcode.md  v3-balance-ui.md
docs/features/sanpo-ban/reviews/: acceptance-hotfix-barcode-chart.md  acceptance-review.md  acceptance.md  basic-design.md  code.md  requirements.md  verify-run.md
docs/features/sanpo-ban/reviews/detailed-design/: _cross-cutting.md  (+2 more)
src/backend/: .env.example  pyproject.toml
src/backend/alembic/versions/: 002_meal_barcode.py  003_weight_body_composition.py  004_v3_kenko_kanri.py  005_walk_met_params.py  006_meal_slot.py
src/backend/app/: main.py
src/backend/app/api/: routes.py
src/backend/app/core/: config.py  errors.py  timezone.py
src/backend/app/models/: entities.py
src/backend/app/schemas/: api.py
src/backend/app/services/: calculations.py  dashboard_service.py  open_food_facts.py  weight_log_factory.py
src/backend/tests/: conftest.py  test_api.py  test_barcode.py  test_timezone.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/public/: manifest.json
src/frontend/src/: barcode-flow.ts  history-chart.ts  main.ts  meal-entry-flow.ts  types.ts  version.ts
src/frontend/src/api/: client.ts
src/frontend/src/styles/: notion.css
src/infra/: docker-compose.yml
src/infra/pi-native/: README.md  install-service.sh  install.sh  update.sh
